simplify performance test using simple messages
Signed-off-by: NeatGuyCoding <15627489+NeatGuyCoding@users.noreply.github.com>